refactor: delete onHold balance, add enable preview feature in Dockerfile, refactore rest api controller